sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:9: error: value beg is not a member of Unit
possible cause: maybe a semicolon is missing before `value beg'?
  if ((isSmaller((p+1), (p)))) {swap((p+1), (p)); test=false}} beg=beg+1}}
                                                               ^